Fix chat button overflow

--- a/client/stylesheets/puzzle.scss
+++ b/client/stylesheets/puzzle.scss
@@ -275,7 +275,8 @@ $puzzle-page-padding: 8px;
 
     .btn {
       flex: 1;
-      padding: 0 auto;
+      padding-right: 2px;
+      padding-left: 2px;
       display: flex;
       align-items: center;
       justify-content: center;
